--- a/01-Data-Ecosystem/Chapter_1.2_Tabular_Data.ipynb
+++ b/01-Data-Ecosystem/Chapter_1.2_Tabular_Data.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "Chapter 1.2 Tabular Data",
       "provenance": [],
-      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,14 +20,13 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/dlsun/pods/blob/master/Chapter_01_The_Data_Ecosystem/Chapter_1.2_Tabular_Data.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ethantrantalis/Data-Science-Intro/blob/master/01-Data-Ecosystem/Chapter_1.2_Tabular_Data.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "N4l5tHGE3TJK",
-        "colab_type": "text"
+        "id": "N4l5tHGE3TJK"
       },
       "source": [
         "# Tabular Data\n",
@@ -40,17 +38,17 @@
         "| Statisticians       | \"observations\" | \"variables\" |\n",
         "| Computer Scientists | \"records\"      | \"fields\"    |\n",
         "\n",
-        "The table below is an example of a \n",
-        "data set that can be represented in tabular form. \n",
-        "This is a sample of user profiles in the \n",
-        "San Francisco Bay Area from the online dating website \n",
-        "OKCupid. In this case, each observation is an OKCupid user, and the variables include age, body type, height, and \n",
-        "(relationship) status. Although a \n",
-        "`DataFrame` can contain values of all types, the \n",
-        "values within a column are typically all of the same \n",
+        "The table below is an example of a\n",
+        "data set that can be represented in tabular form.\n",
+        "This is a sample of user profiles in the\n",
+        "San Francisco Bay Area from the online dating website\n",
+        "OKCupid. In this case, each observation is an OKCupid user, and the variables include age, body type, height, and\n",
+        "(relationship) status. Although a\n",
+        "`DataFrame` can contain values of all types, the\n",
+        "values within a column are typically all of the same\n",
         "type---the age and height columns store\n",
-        "numbers, while the body type and \n",
-        "status columns store strings. Some values may be missing, such as body type for the first user \n",
+        "numbers, while the body type and\n",
+        "status columns store strings. Some values may be missing, such as body type for the first user\n",
         "and diet for the second.\n",
         "\n",
         "| age | body type |        diet       | ... | smokes | height | status |\n",
@@ -61,46 +59,42 @@
         "| ... |    ...    |       ...         | ... |  ...   |  ...   | ... |\n",
         "| 60  |    fit    |                   | ... |   no   |   57   | single |\n",
         "\n",
-        "Within Python, tabular data is typically stored in \n",
+        "Within Python, tabular data is typically stored in\n",
         "a special type of object called a `DataFrame`. A `DataFrame` is optimized for storing tabular data; for example, it uses the fact that the values within a column are all the same type to save memory and speed up computations. Unfortunately, the `DataFrame` is not built into base Python, a reminder that Python is a general-purpose programming language. To be able to work with `DataFrame`s, we have to import a data science package called `pandas`, which essentially does one thing---define a data structure called a `DataFrame` for storing tabular data. But this data structure is so fundamental to data science that importing `pandas` is the very first line of many Jupyter notebooks and Python scripts:"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "P6aZVeKg9ZGb",
-        "colab_type": "code",
-        "colab": {}
+        "id": "P6aZVeKg9ZGb"
       },
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6T1LDcxO9Z0D",
-        "colab_type": "text"
+        "id": "6T1LDcxO9Z0D"
       },
       "source": [
-        "This command makes `pandas` objects and utilities \n",
+        "This command makes `pandas` objects and utilities\n",
         "available under the abbreviation `pd`."
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "KYdirVaS523q",
-        "colab_type": "text"
+        "id": "KYdirVaS523q"
       },
       "source": [
-        "How do we get data, which is ordinarily stored in a file on disk, \n",
-        "into a `pandas` `DataFrame`? `pandas` provides \n",
-        "several utilities for reading data. For example, \n",
-        "the OKCupid data in \n",
-        "the table above is stored as a _comma-separated values_ (CSV) file on \n",
+        "How do we get data, which is ordinarily stored in a file on disk,\n",
+        "into a `pandas` `DataFrame`? `pandas` provides\n",
+        "several utilities for reading data. For example,\n",
+        "the OKCupid data in\n",
+        "the table above is stored as a _comma-separated values_ (CSV) file on\n",
         "the web, available at the URL https://dlsun.github.io/pods/data/okcupid.csv.\n",
         "\n",
         "We can read in this file from the web using the `read_csv` function in `pandas`:"
@@ -109,37 +103,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iQuzKGgy54by",
-        "colab_type": "code",
-        "colab": {}
+        "id": "iQuzKGgy54by"
       },
       "source": [
         "data_dir = \"https://dlsun.github.io/pods/data/\"\n",
         "df_okcupid = pd.read_csv(data_dir + \"okcupid.csv\")\n",
         "df_okcupid.head()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "btNgamkR6bxr",
-        "colab_type": "text"
+        "id": "btNgamkR6bxr"
       },
       "source": [
-        "The `read_csv` function is also able \n",
-        "to read in a file from disk. It automatically infers \n",
-        "where to look based on the file path. \n",
-        "Unless the path is obviously a URL (e.g., it begins with `http://`), it looks for the file \n",
+        "The `read_csv` function is also able\n",
+        "to read in a file from disk. It automatically infers\n",
+        "where to look based on the file path.\n",
+        "Unless the path is obviously a URL (e.g., it begins with `http://`), it looks for the file\n",
         "on the local machine."
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "OTAXMMVLqc9G",
-        "colab_type": "text"
+        "id": "OTAXMMVLqc9G"
       },
       "source": [
         "Notice above how missing values are represented in a `pandas` `DataFrame`. Each missing value is represented by a `NaN`, which is short for \"not a number\". As we will see, most `pandas` operations simply ignore `NaN` values."
@@ -148,8 +138,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "7pgZHERn8zmO",
-        "colab_type": "text"
+        "id": "7pgZHERn8zmO"
       },
       "source": [
         "## Exercises"
@@ -158,8 +147,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "metKlkS6stFX",
-        "colab_type": "text"
+        "id": "metKlkS6stFX"
       },
       "source": [
         "1\\. Download the OKCupid data set above to your workstation and use `read_csv` to read in the file from your local machine."
@@ -168,26 +156,26 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ZlbwvcmU9FNP",
-        "colab_type": "text"
+        "id": "ZlbwvcmU9FNP"
       },
       "source": [
-        "2\\. Read in the Framingham Heart Study data set, \n",
-        "    which is available at the URL https://dlsun.github.io/pods/data/framingham_long.csv. Be sure to give the `DataFrame` an \n",
+        "2\\. Read in the Framingham Heart Study data set,\n",
+        "    which is available at the URL https://dlsun.github.io/pods/data/framingham_long.csv. Be sure to give the `DataFrame` an\n",
         "    informative variable name."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4geVUImY9OiG",
-        "colab_type": "code",
-        "colab": {}
+        "id": "4geVUImY9OiG"
       },
       "source": [
-        "# YOUR CODE HERE"
+        "# YOUR CODE HERE\n",
+        "\n",
+        "\n",
+        "import pandas as pd\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     }
   ]
